--- a/BeluqaTahir/BeluqaTahir.Applications/BeluqaTahir.Applications.csproj
+++ b/BeluqaTahir/BeluqaTahir.Applications/BeluqaTahir.Applications.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Core\Meddleware\**" />
+    <EmbeddedResource Remove="Core\Meddleware\**" />
+    <None Remove="Core\Meddleware\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
@@ -13,10 +19,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BeluqaTahir.Domain\BeluqaTahir.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Core\Meddleware\" />
   </ItemGroup>
 
 </Project>
