--- a/BeluqaTahir/BeluqaTahir.WebUI/appsettings.json
+++ b/BeluqaTahir/BeluqaTahir.WebUI/appsettings.json
@@ -8,12 +8,13 @@
   },
   "emailAccount": {
     "displayName": "Riode",
-    "smtpServer": "smtp.mail.ru",
-    "smtpPort": 465,
-    "username": "fullstackstaff@mail.ru",
-    "password": "!sysStudent@0!9#win1",
-    "cc": "turkanhewimova6@gmail.com"
+    "smtpServer": "smtp.gmail.com",
+    "smtpPort": 587,
+    "UserName": "ilikobagirov@gmail.com",
+    "password": "0504964647",
+    "cc": ""
   },
+
   "ConnectionStrings": {
 
     "cString": "Data Source =.\\SQLEXPRESS; Initial Catalog = BeluqaTahir; User Id = sa; Password = query;"
